# subway

./: .gitignore  Cargo.toml  Dockerfile  README.md  database.txt  docker-compose.yml  up
ADRs/: 001-rest.md  002-docker.md  006-diesel.md  007-resources.md
backend/: Cargo.toml  Dockerfile  README.md  config.toml  docker-compose.yml
backend/ADRs/: 000-rust.md  003-salvo.md  004-openapi.md  005-postgres.md  008-config.md
backend/migrations/2025-09-04_00_create_table_posts_by_id/: down.sql  up.sql
backend/migrations/2025-09-20_00_create_table_authors_by_id/: down.sql  up.sql
backend/migrations/20250904100732_create_table_posts_by_id/: down.sql  up.sql
backend/src/: auth.rs  auth_middleware.rs  config.rs  db.rs  handlers.rs  keycloak_auth_middleware.rs  main.rs  model.rs  newdb.rs
backend/src/auth/: in_memory.rs  keycloak.rs  realm_export.rs
backend/src/db/: in_memory.rs  postgres.rs  table.rs  tables.rs
backend/src/db/in_memory/: table.rs
backend/src/db/in_memory/tables/: posts_by_id.rs
backend/src/db/postgres/: tables.rs
backend/src/db/table/: in_memory.rs
backend/src/db/tables/: authors_by_id.rs  in_memory.rs  postgres.rs  posts_by_id.rs
backend/src/db/tables/in_memory/: authors_by_id.rs  posts_by_id.rs
backend/src/db/tables/postgres/: authors_by_id.rs  posts_by_id.rs
backend/src/handlers/: health.rs  login.rs  misc.rs  posts.rs
backend/src/handlers/authors/: get.rs  post.rs
backend/src/handlers/login/: keycloak_token.rs  username_and_password.rs
backend/src/handlers/misc/: admin_only.rs  hello.rs  not_found.rs  protected.rs  user_only.rs
backend/src/handlers/posts/: get.rs  post.rs
backend/src/model/: README.md  author.rs  post.rs
backend/src/newdb/: in_memory.rs  postgres.rs  tables.rs
backend/src/newdb/in_memory/: table.rs
backend/src/newdb/in_memory/tables/: posts_by_id.rs
backend/src/newdb/postgres/tables/: posts_by_id.rs
backend/src/newdb/tables/: posts_by_id.rs
frontend/: .env.container  Dockerfile  README.md  eslint.config.js  package-lock.json  package.json
frontend/src/: App.tsx
keycloak/: Dockerfile  HealthCheck.java  README.md  realm-export.json
migrations/20250904100732_create_table_users/: down.sql  up.sql
src/: README.md  db.rs  main.rs  model.rs
src/db/: in_memory.rs  postgres.rs  table.rs
src/model/: post.rs
(+22 files in other folders)
