[package]
name = "subway"
version = "0.1.0"
edition = "2024"

[dependencies]
salvo = { version = "0.83.0", features = ["acme", "quinn", "oapi"] }
tokio = "1.47.1"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4"] }
diesel = { version = "2.2.12", features = ["r2d2", "postgres"] }
once_cell = "1.21.3"
pq-sys = { version = "0.7.2", features = ["bundled"] } # required by diesel, even though we do not use it directly
openssl-sys = { version = "0.9.100", features = ["vendored"] } # required by diesel, even though we do not use it directly
diesel_migrations = "2.2.0"

[features]
postgres = []