[package]
name = "subway-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
salvo = { version = "0.84.0", features = ["acme", "cors", "quinn", "oapi"] }
tokio = "1.47.1"
serde = { version = "1.0.219", features = ["derive"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
diesel = { version = "2.2.12", features = ["r2d2", "postgres", "uuid"] }
pq-sys = { version = "0.7.2", features = ["bundled"] } # required by diesel, even though we do not use it directly
openssl-sys = { version = "0.9.100", features = ["vendored"] } # required by diesel, even though we do not use it directly
diesel_migrations = "2.2.0"
