[package]
name = "subway-backend"
version = "0.1.0"
edition = "2024"

[dependencies]
salvo = { version = "0.84.2", features = ["acme", "cors", "quinn", "oapi", "rustls"] }
tokio = "1.48.0"
serde = { version = "1.0.228", features = ["derive"] }
uuid = { version = "1.18.1", features = ["v3", "v4", "serde"] }
diesel = { version = "2.3.3", features = ["r2d2", "postgres", "uuid"] }
pq-sys = { version = "0.7.5", features = ["bundled"] } # required by diesel, even though we do not use it directly
openssl-sys = { version = "0.9.111", features = ["vendored"] } # required by diesel, even though we do not use it directly
diesel_migrations = "2.3.0"
jsonwebtoken = { version = "10.2.0", features = ["rust_crypto"] }
reqwest = { version = "0.12.24", features = ["json"] }
serde_json = "1.0.145"
toml = "0.9.8"
salvo_extra = { version = "0.84.2", features = ["affix-state"] }
rand = "0.9.2"
base64 = "0.22.1"
